# UST_Training

./: CMakeLists.txt  MyProject.cpp  README.md  gitActions.md
.github/workflows/: ci.yml
MyProject/: MyProject.h
MyProject/.github/workflows/: ci.yml
MyProject/src/: main.cpp  utils.cpp
include/mylib/: utils.h
src/: main.cpp  utils.cpp
tests/: test_main.cpp
